commit to review

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,22 @@
       // 可选 TODO: 用你的 Google Analytics ID 替换它
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
+
+      window.onload = function () {  
+          //异步延迟加载样式  
+          var link = document.createElement('link');  
+          link.href = '//fonts.googleapis.com/css?family=Open+Sans:400,700';  
+          link.rel = 'stylesheet'; 
+          try{
+             document.querySelector('head').appendChild(link); 
+            link.onload = function() {
+              document.body.style.fontFamily = "Trebuchet MS";
+            }
+          }catch(e){
+            console.log(e);
+          }
+        } 
+     
     </script>
     <script src="http://www.google-analytics.com/analytics.js" async ></script>
     <script async src="js/perfmatters.js"></script>
